tests/bad/too-many-args.ris
int add(int a, int b):
    return a + b;

void main():
    add(4, true, "foo");
    return;